Add coming soon block.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
+    <div class="hero-unit">
+      <h1>Coming Soon</h1>
+      <p>
+        In the meantime, check us out on <a href="http://www.facebook.com/NickKnackKrochet">facebook</a>.
+      </p>
+    </div>
     <footer class="navbar navbar-fixed-bottom">
       <div class="navbar-inner">
         <div><small><a href="http://www.facebook.com/NickKnackKrochet">Facebook</a> &mdash; <a href="mailto:jennifer@nickknackkrochet.com">Email</a> &mdash; <a href="tel:+17577528880">(757) 752-8880</a></small></div>
