--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0" />
     <title>Nick Knack Krochet</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-icons.min.css" />
     <link rel="stylesheet" href="/styles/style.css" />
