Add a rootElement for the app.
Ember defaults to appending to body, which meant that the products were
going into the DOM after the footer.  In a mobile environment, that
meant the footer appeared above the products.

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
       </p>
     </div>
 
+    <div id="app"></div>
+
     <footer class="navbar navbar-fixed-bottom">
       <div class="navbar-inner">
         <div><small><a href="http://www.facebook.com/NickKnackKrochet">Facebook</a> &mdash; <a href="mailto:jennifer@nickknackkrochet.com">Email</a> &mdash; <a href="tel:+17577528880">(757) 752-8880</a></small></div>
