--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,23 @@
     <script type="text/x-handlebars" data-template-name="products">
       <div class="row-fluid">
         {{#collection contentBinding="content" tagName="ul" classNames="thumbnails" itemClassNames="span3"}}
-          <div class="thumbnail well">
+          <div {{action showProduct view.content}} class="thumbnail well">
             <img {{bindAttr src="view.content.pictures.0.small"}} />
             <h3>{{view.content.name}}</h3>
             <p>{{view.content.description}}</p>
             <p>{{view.content.price}}</p>
           </div>
         {{/collection}}
+      </div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="product">
+      <div class="row-fluid">
+        <div {{action goHome}} class="hero-unit span6 offset3">
+          <img {{bindAttr src="content.pictures.0.large"}} style="width: 100%;" />
+          <h3>{{content.name}}</h3>
+            <p>{{content.description}}</p>
+            <p>{{content.price}}</p>
+        </div>
       </div>
     </script>
     <script type="text/x-handlebars" data-template-name="comingSoon">
