--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,39 @@
     <title>Nick Knack Krochet</title>
     <link rel="stylesheet" href="/styles/style.css" />
 
-    <script type="text/x-handlebars" data-template-name="application">
-      {{outlet header}}
-      {{outlet body}}
-      {{outlet footer}}
-    </script>
     <script type="text/x-handlebars" data-template-name="products">
-      <div class="row-fluid">
-        {{#collection contentBinding="content" tagName="ul" classNames="thumbnails" itemClassNames="span3"}}
-          <div {{action showProduct view.content}} class="thumbnail well link">
-            <img {{bindAttr src="view.content.pictures.0.small"}} />
-            <h3>{{view.content.name}}</h3>
-            <p>{{view.content.description}}</p>
-            <p>{{view.content.price}}</p>
-          </div>
-        {{/collection}}
+      <div class="hero-unit">
+        <h1>Coming Soon</h1>
+        <p>
+          In the meantime, check us out on <a href="http://www.facebook.com/NickKnackKrochet">facebook</a>.
+        </p>
       </div>
+
+      <div class="row-fluid">
+        {{outlet}}
+      </div>
+
+      <footer class="navbar navbar-fixed-bottom">
+        <div class="navbar-inner">
+          <div><small><a class="navbar-link" href="http://www.facebook.com/NickKnackKrochet">Facebook</a> &mdash; <a class="navbar-link" href="mailto:jennifer@nickknackkrochet.com">Email</a> &mdash; <a class="navbar-link" href="tel:+17577528880">(757) 752-8880</a></small></div>
+          <div><small>&copy;2012 Nick Knack Krochet</small></div>
+        </div>
+      </footer>
+    </script>
+    <script type="text/x-handlebars" data-template-name="products/index">
+      {{#collection contentBinding="content" tagName="ul" classNames="thumbnails" itemClassNames="span3"}}
+        <div {{action showProduct view.content}} class="thumbnail well link">
+          <img {{bindAttr src="view.content.primaryPicture.small"}} />
+          <h3>{{view.content.name}}</h3>
+          <p>{{view.content.description}}</p>
+          <p>{{view.content.price}}</p>
+        </div>
+      {{/collection}}
     </script>
     <script type="text/x-handlebars" data-template-name="product">
       <div class="row-fluid">
         <div {{action goHome}} class="hero-unit span6 offset3 link">
-          <img {{bindAttr src="content.pictures.0.large"}} style="width: 100%;" />
+          <img {{bindAttr src="content.primaryPicture.large"}} style="width: 100%;" />
           <h3>{{content.name}}</h3>
             <p>{{content.description}}</p>
             {{#if content.sizes}}
@@ -42,27 +54,12 @@
         </div>
       </div>
     </script>
-    <script type="text/x-handlebars" data-template-name="comingSoon">
-      <div class="hero-unit">
-        <h1>Coming Soon</h1>
-        <p>
-          In the meantime, check us out on <a href="http://www.facebook.com/NickKnackKrochet">facebook</a>.
-        </p>
-      </div>
-    </script>
-    <script type="text/x-handlebars" data-template-name="copyright">
-      <footer class="navbar navbar-fixed-bottom">
-        <div class="navbar-inner">
-          <div><small><a class="navbar-link" href="http://www.facebook.com/NickKnackKrochet">Facebook</a> &mdash; <a class="navbar-link" href="mailto:jennifer@nickknackkrochet.com">Email</a> &mdash; <a class="navbar-link" href="tel:+17577528880">(757) 752-8880</a></small></div>
-          <div><small>&copy;2012 Nick Knack Krochet</small></div>
-        </div>
-      </footer>
-    </script>
   </head>
   <body>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.1/handlebars.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.0-pre.2/ember-1.0.0-pre.2.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.0-rc.1/ember.min.js"></script>
+    <script type="text/javascript" src="/scripts/ember-data.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/mixpanel.js"></script>
   </body>
