Remove link to home page from product page.
This was an unintuitive link to begin with and needed to be replaced,
but currently there is no reason to have such a link (the home page is
just the product page without the product :) ).  Stripping it out makes
things much nicer.

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
     <script type="text/x-handlebars" data-template-name="product">
       <div class="row-fluid">
-        <div {{action goHome}} class="hero-unit span6 offset3 link">
+        <div class="hero-unit span6 offset3 link">
           <img {{bindAttr src="content.primaryPicture.large"}} style="width: 100%;" />
           <h3>{{content.name}}</h3>
             <p>{{content.description}}</p>
